<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotiyBtnName">Spotify Streamer</string>
    <string name="subjectTxtView">My Nanodegree Apps!!</string>
    <string name="libAppBtnName">Library App</string>
    <string name="scoreAppBtnName">Scores App</string>
    <string name="bibBtnName">Build it Bigger</string>
    <string name="capstoneBtnName">capstone : My own app</string>
    <string name="xyzBtnName">XYZ Reader</string>
</resources>
